# sigrlinn

./: CMakeLists.txt  LICENSE  README.md  demo.cc
cmake/: FindD3D11.cmake  FindD3D12.cmake
data/ak/: AKS74U1.mesh
data/meshes/: connector020.mesh
data/meshes/cattail/: Cattail_RT_0010.mesh  Cattail_RT_0020.mesh  Cattail_RT_0030.mesh  Cattail_RT_0040.mesh  Cattail_RT_0050.mesh  Cattail_RT_0060.mesh  Cattail_RT_0070.mesh  Cattail_RT_0080.mesh  Cattail_RT_0090.mesh  Cattail_RT_0100.mesh  Cattail_RT_0110.mesh  Cattail_RT_0120.mesh  Cattail_RT_0130.mesh  Cattail_RT_0140.mesh  Cattail_RT_0150.mesh  Cattail_RT_0160.mesh  Cattail_RT_0170.mesh  Cattail_RT_0180.mesh  Cattail_RT_0190.mesh  Cattail_RT_0200.mesh  Cattail_RT_0210.mesh  Cattail_RT_0220.mesh  Cattail_RT_0230.mesh  Cattail_RT_0240.mesh  Cattail_RT_0250.mesh  Cattail_RT_0260.mesh  Cattail_RT_0270.mesh  Cattail_RT_0280.mesh  Cattail_RT_0290.mesh  Cattail_RT_0300.mesh  Cattail_RT_0310.mesh  Cattail_RT_0320.mesh  Cattail_RT_0330.mesh  Cattail_RT_0340.mesh  Cattail_RT_0350.mesh  Cattail_RT_0360.mesh  Cattail_RT_0370.mesh  Cattail_RT_0380.mesh  Cattail_RT_0390.mesh  Cattail_RT_0400.mesh  (+60 more)
data/textures/: CattailBlades.dds  CattailBlades.tga  CattailBlades_Normal.tga  CattailBlades_Spec.tga  raindrop.dds  snowflake.dds
demo/: app.cc  app.hh  demo_asteroids.cc  demo_cmrs.cc  demo_cube.cc  demo_ffd.cc  demo_grass.cc  demo_nbody.cc  demo_oit.cc  demo_particles.cc  demo_pbr.cc  win32_app.cc
demo/common/: app.cc  app.hh  meshloader.cc  meshloader.hh  textureloader.cc  textureloader.hh
shaders/: cmrs.hlsl  dvp.hlsl  dvp_cull.hlsl  dvp_downscale.hlsl  nbody.hlsl  nbody_cs.hlsl  oit_cube.hlsl  oit_resolve.hlsl  oit_simple.hlsl  particles.hlsl  particles_cs.hlsl  pbr_gbuffer.hlsl  pbr_resolve.hlsl  sample0.hlsl
sigrlinn/: sigrlinn.hh  sigrlinn_d3d11.cc  sigrlinn_d3d12.cc  sigrlinn_gl4.cc  sigrlinn_mantle.cc
sigrlinn/GL/: glew.c  glew.h  glext.h
sigrlinn/private/: array.hh  computequeue.hh  drawqueue.hh
